Replaced Cordova's loader with Dojo and patched test suite to work.
Overwriting Apache Cordova's loader with Dojo 1.7.2 AMD loader mostly
works. Need to set the "async: true" flag to enable AMD API and then
patch loader to enable modules to be executed when definied.

--- a/test/suite.html
+++ b/test/suite.html
@@ -31,12 +31,19 @@
       });
 
     })();
+
+    dojoConfig =  {
+        async: true
+    };
   </script>
 
   <script type="text/javascript">
       "##MODULES##"
       var define = cordova.define;
       var require = cordova.require;
+      // Make "remove" a no-op, AMD doesn't spec this function.
+      define.remove = function () {
+      }
   </script>
 
   <!-- TESTS -->
